create ngnix with TLS

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,6 +1,8 @@
 DOMAIN_NAME=chelmerd.42.fr
 # certificates
-CERTS=./XXXX
+CERTS_=/etc/ssl/certs/nginx-selfsigned.crt
+# certificate key
+CERT_KEY=/etc/ssl/nginx-selfsigned.key
 # MYSQL SETUP
 MYSQL_ROOT_PASSWORD=rootsecret
 MYSQL_USER=db_user
