--- a/srcs/.env
+++ b/srcs/.env
@@ -7,3 +7,5 @@ CERT_KEY=/etc/ssl/nginx-selfsigned.key
 MYSQL_ROOT_PASSWORD=rootsecret
 MYSQL_USER=db_user
 MYSQL_PASSWORD=secret
+WORDPRESS_DB_NAME=wordpress
+TZ=Europe/Berlin
