--- a/srcs/requirements/mariadb/tools/my.cnf
+++ b/srcs/requirements/mariadb/tools/my.cnf
@@ -1,5 +1,5 @@
 [mysqld]
 socket=/var/lib/mysql/mysql.sock
-datadir=/var/data
+# datadir=/var/data
 bind-address=0.0.0.0
-skip-grant-tables
+# skip-networking
