--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -5,7 +5,7 @@ RUN apk update && apk add \
     mariadb-client
 
 COPY ./tools/my.cnf /etc
-RUN /usr/bin/mariadb-install-db --user=mysql --basedir=/usr --datadir=/var/lib/mysql --skip-test-db
+RUN /usr/bin/mariadb-install-db --user=mysql --basedir=/usr --skip-test-db
 
 EXPOSE 3306
-CMD ["/usr/bin/mysqld", "--user=mysql", "--init-file=init.sql"]
+CMD ["/usr/bin/mysqld", "--user=mysql", "--init-file=/usr/local/bin/init.sql"]
