--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -26,8 +26,6 @@ services:
     build:
       context: ./requirements/mariadb/
     volumes:
-      - ./requirements/mariadb/tools/my.cnf:/etc/my.cnf
-      - ./requirements/mariadb/tools/init.sql:/usr/local/bin/init.sql
       - db_data:/var/lib/mysql
     environment:
       - MYSQL_ROOT_PASSWORD
@@ -37,8 +35,8 @@ services:
       - TZ
     networks:
       - inception_network
-    # restart: unless-stopped
-    # command: /bin/sh -c "chown -R mysql:mysql /var/lib/mysql && /usr/bin/mysqld --user=mysql --init-file=/usr/local/bin/init.sql"
+    restart: unless-stopped
+    command: /bin/sh -c "envsubst < /usr/local/bin/init.template > /usr/local/bin/init.sql && /usr/bin/mysqld --user=mysql --init-file=/usr/local/bin/init.sql"
 
   wordpress:
     image: chelmerd/wordpress-fpm:v1
